# example-a-m-contracts-agent

./: .example.config.yml  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  constants.py  graph.py  logger.py  main.py
src/api/v1/: api.py
src/api/v1/endpoints/: ma.py
src/nodes/: __init__.py  aggregate.py  company_info.py  financing.py  human_approval.py  intake.py  recommendation.py  regulatory.py  stubs.py  supervisor.py
src/schemas/: ma.py
src/utils/: __init__.py  config_class.py  finance.py  llm.py
