[project]
name = "langgr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
]
